--- a/new_index.html
+++ b/new_index.html
@@ -501,7 +501,7 @@
                     <!--                        <img id="body_img_ad1" class="img-rounded shadow" style="padding: 0" width="100%" alt="" src="">-->
                     <!--                    </a>-->
                     <div style="width: 100%;height: 95px;background: green">
-                        <h2 class="text-center">专题1：党建高质量发展</h2>
+                        <h2 class="text-center">专题1：十九届六中全会学习专栏</h2>
                     </div>
                 </div>
             </div>
@@ -538,7 +538,7 @@
                     <!--                        <img id="body_img_ad1" class="img-rounded shadow" style="padding: 0" width="100%" alt="" src="">-->
                     <!--                    </a>-->
                     <div style="width: 100%;height: 95px;background: green">
-                        <h2 class="text-center">专题2：法制建设专栏</h2>
+                        <h2 class="text-center">专题2：营商环境大提升</h2>
                     </div>
                 </div>
             </div>
