--- a/new_index.html
+++ b/new_index.html
@@ -328,7 +328,7 @@
 
         $(document).ready(function () {
             if (window.outerWidth > 1536) {
-                if(window.outerWidth / 1536>1){
+                if (window.outerWidth / 1536 > 1) {
                     document.getElementsByTagName('body')[0].style.zoom = window.outerWidth / 1536;
                 }
             }
@@ -415,9 +415,12 @@
                 <div class="col-md-12 col-lg-12">
                     <div class="scroll">
                         <ul class="list">
-                            <li><a href="#" target="_blank">通知1<span class="text-right badge  badge-new">new</span></a></li>
-                            <li><a href="#" target="_blank">通知2<span class="text-right badge  badge-new">new</span></a></li>
-                            <li><a href="#" target="_blank">通知3<span class="text-right badge  badge-new">new</span></a></li>
+                            <li><a href="#" target="_blank">通知1<span class="text-right badge  badge-new">new</span></a>
+                            </li>
+                            <li><a href="#" target="_blank">通知2<span class="text-right badge  badge-new">new</span></a>
+                            </li>
+                            <li><a href="#" target="_blank">通知3<span class="text-right badge  badge-new">new</span></a>
+                            </li>
                             <li><a href="#" target="_blank">通知4</a></li>
                             <li><a href="#" target="_blank">通知5</a></li>
                             <li><a href="#" target="_blank">通知6</a></li>
@@ -496,7 +499,8 @@
             <!--                栏目2-->
 
             <div class="row clearfix">
-                <div class="col-lg-12 col-md-12 hidden-sm" style="position: relative;margin-top: 25px ;padding-bottom: 30px">
+                <div class="col-lg-12 col-md-12 hidden-sm"
+                     style="position: relative;margin-top: 25px ;padding-bottom: 30px">
                     <!--                    <a id="body_ad1">-->
                     <!--                        <img id="body_img_ad1" class="img-rounded shadow" style="padding: 0" width="100%" alt="" src="">-->
                     <!--                    </a>-->
@@ -519,12 +523,12 @@
                 </ul>
             </div>
             <!--                栏目4-->
-<!--            <div id="channel-4" class="col-md-4 col-lg-4 col-sm-6 column channel_box">-->
-<!--                <a href="#"><p class="Channel-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>-->
-<!--                    栏目1</p></a>-->
-<!--                <ul class="list-group">-->
-<!--                </ul>-->
-<!--            </div>-->
+            <!--            <div id="channel-4" class="col-md-4 col-lg-4 col-sm-6 column channel_box">-->
+            <!--                <a href="#"><p class="Channel-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>-->
+            <!--                    栏目1</p></a>-->
+            <!--                <ul class="list-group">-->
+            <!--                </ul>-->
+            <!--            </div>-->
             <div id="channel-5" class="col-md-4 col-lg-4 col-sm-6 column channel_box">
                 <a href="#"><p class="Channel-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>
                     栏目1</p></a>
@@ -533,7 +537,8 @@
             </div>
 
             <div class="row clearfix">
-                <div class="col-lg-12 col-md-12  hidden-sm" style="position: relative;margin-top: 25px ;padding-bottom: 30px">
+                <div class="col-lg-12 col-md-12  hidden-sm"
+                     style="position: relative;margin-top: 25px ;padding-bottom: 30px">
                     <!--                    <a id="body_ad1">-->
                     <!--                        <img id="body_img_ad1" class="img-rounded shadow" style="padding: 0" width="100%" alt="" src="">-->
                     <!--                    </a>-->
@@ -554,7 +559,8 @@
 
                 </ul>
             </div>
-            <div class="col-lg-12 col-md-12  hidden-sm" style="position: relative;margin-top: 25px ;padding-bottom: 30px">
+            <div class="col-lg-12 col-md-12  hidden-sm"
+                 style="position: relative;margin-top: 25px ;padding-bottom: 30px">
                 <!--                    <a id="body_ad1">-->
                 <!--                        <img id="body_img_ad1" class="img-rounded shadow" style="padding: 0" width="100%" alt="" src="">-->
                 <!--                    </a>-->
